Link to ml.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul>
           <li><a href="#">The Project</a></li>
           <li><a href="#">Meet the Teams</a></li>
+          <li><a href="ml.html">Machine Learning</a></li>
           <li><a href="#" class="contact-btn">Contact Us</a></li>
         </ul>
       </nav>
