--- a/ml.html
+++ b/ml.html
@@ -1,34 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Machine Learning</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="logo">
-                <img src="image/bean_icon.png" alt="ColCo Logo" style="width: 20px; height: 20px;" />
-                <span>ColCo</span>
-            </div>
-        </nav>
+      <nav>
+        <div class="logo">
+          <img
+            src="image/bean_icon.png"
+            alt="ColCo Logo"
+            style="width: 20px; height: 20px"
+          />
+          <span>ColCo</span>
+        </div>
+        <ul>
+          <li><a href="index.html">The Project</a></li>
+          <li class="dropdown">
+            <a href="ml.html">Meet the Teams</a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Colombia Team</a></li>
+              <li><a href="ml.html">Disease Detection</a></li>
+              <li><a href="#">Data Collection</a></li>
+            </ul>
+          </li>
+          <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Welcome to Machine Learning</h1>
-        </div>
+    <section class="ml">
+      <div class="ml-content">
+        <h1>Disease Detection Using Machine Learning</h1>
+      </div>
     </section>
 
     <section class="intro">
-        <div class="intro-content">
-            <p>Our project leverages machine learning techniques to detect diseases in cocoa pods, providing farmers with precise insights and recommendations to improve their crop health and productivity. With cutting-edge image processing and data analysis, our goal is...</p>
-        </div>
+      <div class="intro-content">
+        <p>
+          Cocoa is a high-value crop with significant economic and cultural
+          importance. Colombia, as a key global player, exported USD 61.4
+          million in cocoa and derivatives in 2019, contributing to a global
+          market worth, USD 103 billion annually. Cocoa crops are threatened by
+          disease that can lead to up to 38% annual yield loss. Traditional
+          disease detection relies on manual inspection, which is
+          labor-intensive, subjective, and inconsistent. This project uses deep
+          learning techniques, specifically convolutional neural networks
+          (CNNs), to detect diseases in cacao pods through image classification.
+        </p>
+      </div>
     </section>
-
-</body>
+    <!-- Contact Section -->
+      <section id="contact-section" class="contact-section">
+        <div class="contact-info">
+          <div class="info-item">
+            <span>📧</span>
+            <h3>Email</h3>
+            <p>
+              mario.giraldo@csun.edu <br />
+              alex.modarresi@csun.edu
+            </p>
+          </div>
+          <div class="info-item">
+            <span>📞</span>
+            <h3>Phone</h3>
+            <p>(***)-***-****</p>
+          </div>
+          <div class="info-item">
+            <span>📍</span>
+            <h3>Office</h3>
+            <p>1686, Geraldine Lane<br />New York, NY 10013</p>
+          </div>
+          <!--
+          <div class="info-item">
+            <span>🔗</span>
+            <h3>Socials</h3>
+            <div class="social-icons">
+              <a href="#"><i>FB</i></a>
+              <a href="#"><i>TW</i></a>
+              <a href="#"><i>IG</i></a>
+              <a href="#"><i>LI</i></a>
+            </div>
+          </div>
+          -->
+        </div>
+        <!-- Contact Form -->
+        <div class="contact-form">
+          <form action="#" method="post">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="email@gmail.com"
+              required
+            />
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              placeholder="Your message..."
+              rows="5"
+              required
+            ></textarea>
+            <button type="submit">Send</button>
+          </form>
+        </div>
+      </section>
+    <footer class="footer">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <h3>ColCo</h3>
+          </div>
+          <div class="footer-links">
+            <h4>Quick links</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Why choose us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+          <!--
+          <div class="footer-products">
+            <h4>Products</h4>
+            <ul>
+              <li>...</li>
+              <li>...</li>
+              <li>...</li>
+              <li>...</li>
+              <li>...</li>
+            </ul>
+          </div>
+          -->
+          <div class="footer-contact">
+            <h4>Contact Us</h4>
+            <p>Business Inquiry: <strong>***-***-****</strong></p>
+            <p>Customer Care: <strong>***-***-****</strong></p>
+          </div>
+          <!--
+          <div class="footer-social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <a href="#">FB</a>
+              <a href="#">TW</a>
+              <a href="#">IG</a>
+              <a href="#">YT</a>
+            </div>
+          </div>
+          -->
+        </div>
+      </footer>
+    <footer class="footer2">
+      <p>&copy; 2024 ColCo. All Rights Reserved.</p>
+    </footer>
+  </body>
 </html>
-
