--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
         </div>
 
         <!-- Card 2 -->
+      <a href="ml.html" target="_blank" style="text-decoration: none; display: block;">
         <div class="team-card">
-          <img src="image/plant-ml.jpg" />
+          <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
           <div class="overlay-text">
-            <h3>Machine Learning Team</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h3>Machine Learning Team</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
+      </a>
 
         <!-- Card 3 -->
         <div class="team-card">
