minor updates to contact info

--- a/index.html
+++ b/index.html
@@ -118,15 +118,19 @@
         </a>
 
         <!-- Card 2 -->
-      <a href="ml.html" target="_blank" style="text-decoration: none; display: block;">
-        <div class="team-card">
-          <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
-          <div class="overlay-text">
+        <a
+          href="ml.html"
+          target="_blank"
+          style="text-decoration: none; display: block"
+        >
+          <div class="team-card">
+            <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
+            <div class="overlay-text">
               <h3>Machine Learning Team</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
           </div>
-        </div>
-      </a>
+        </a>
 
         <!-- Card 3 -->
         <a href="data-collection-team.html" class="team-card">
@@ -195,7 +199,7 @@
           <div class="info-item">
             <span>📞</span>
             <h3>Phone</h3>
-            <p>(***)-***-****</p>
+            <p>(818) 677-4431 <br /></p>
           </div>
           <div class="info-item">
             <span>📍</span>
@@ -241,16 +245,21 @@
       <footer class="footer">
         <div class="footer-content">
           <div class="footer-logo">
+            <img
+              src="image/bean_icon.png"
+              alt="ColCo Logo"
+              style="width: 20px; height: auto"
+            />
             <h3>ColCo</h3>
           </div>
           <div class="footer-links">
             <h4>Quick links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
-              <li><a href="#">Why choose us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <!--<li><a href="#">Why choose us</a></li>
+              <li><a href="#">Privacy Policy</a></li>-->
             </ul>
           </div>
           <!--
@@ -267,8 +276,7 @@
           -->
           <div class="footer-contact">
             <h4>Contact Us</h4>
-            <p>Business Inquiry: <strong>***-***-****</strong></p>
-            <p>Customer Care: <strong>***-***-****</strong></p>
+            <p>Mario Giraldo: <strong>(818) 677-4431</strong></p>
           </div>
           <!--
           <div class="footer-social">
@@ -283,10 +291,10 @@
           -->
         </div>
       </footer>
-          <!-- 2nd Footer Section -->
-    <footer class="footer2">
-      <p>&copy; 2024 ColCo. All Rights Reserved.</p>
-    </footer>
+      <!-- 2nd Footer Section -->
+      <footer class="footer2">
+        <p>&copy; 2024 ColCo. All Rights Reserved.</p>
+      </footer>
     </body>
 
     <script>
