--- a/ml.html
+++ b/ml.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Machine Learning</title>
+    <title>Meet the Teams</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -55,27 +55,27 @@
       </div>
     </section>
     <!-- Contact Section -->
-      <section id="contact-section" class="contact-section">
-        <div class="contact-info">
-          <div class="info-item">
-            <span>📧</span>
-            <h3>Email</h3>
-            <p>
-              mario.giraldo@csun.edu <br />
-              alex.modarresi@csun.edu
-            </p>
-          </div>
-          <div class="info-item">
-            <span>📞</span>
-            <h3>Phone</h3>
-            <p>(***)-***-****</p>
-          </div>
-          <div class="info-item">
-            <span>📍</span>
-            <h3>Office</h3>
-            <p>1686, Geraldine Lane<br />New York, NY 10013</p>
-          </div>
-          <!--
+    <section id="contact-section" class="contact-section">
+      <div class="contact-info">
+        <div class="info-item">
+          <span>📧</span>
+          <h3>Email</h3>
+          <p>
+            mario.giraldo@csun.edu <br />
+            alex.modarresi@csun.edu
+          </p>
+        </div>
+        <div class="info-item">
+          <span>📞</span>
+          <h3>Phone</h3>
+            <p>(818) 677-4431 <br /></p>
+        </div>
+        <div class="info-item">
+          <span>📍</span>
+          <h3>Office</h3>
+          <p>1686, Geraldine Lane<br />New York, NY 10013</p>
+        </div>
+        <!--
           <div class="info-item">
             <span>🔗</span>
             <h3>Socials</h3>
@@ -87,44 +87,44 @@
             </div>
           </div>
           -->
-        </div>
-        <!-- Contact Form -->
-        <div class="contact-form">
-          <form action="#" method="post">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              placeholder="email@gmail.com"
-              required
-            />
-            <label for="message">Message</label>
-            <textarea
-              id="message"
-              placeholder="Your message..."
-              rows="5"
-              required
-            ></textarea>
-            <button type="submit">Send</button>
-          </form>
-        </div>
-      </section>
+      </div>
+      <!-- Contact Form -->
+      <div class="contact-form">
+        <form action="#" method="post">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="email@gmail.com"
+            required
+          />
+          <label for="message">Message</label>
+          <textarea
+            id="message"
+            placeholder="Your message..."
+            rows="5"
+            required
+          ></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </section>
     <footer class="footer">
-        <div class="footer-content">
-          <div class="footer-logo">
-            <h3>ColCo</h3>
-          </div>
-          <div class="footer-links">
-            <h4>Quick links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Why choose us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-          </div>
-          <!--
+      <div class="footer-content">
+        <div class="footer-logo">
+          <h3>ColCo</h3>
+        </div>
+        <div class="footer-links">
+          <h4>Quick links</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <!--<li><a href="#">Why choose us</a></li>
+            <li><a href="#">Privacy Policy</a></li>-->
+          </ul>
+        </div>
+        <!--
           <div class="footer-products">
             <h4>Products</h4>
             <ul>
@@ -136,12 +136,12 @@
             </ul>
           </div>
           -->
-          <div class="footer-contact">
-            <h4>Contact Us</h4>
-            <p>Business Inquiry: <strong>***-***-****</strong></p>
-            <p>Customer Care: <strong>***-***-****</strong></p>
-          </div>
-          <!--
+        <div class="footer-contact">
+          <h4>Contact Us</h4>
+          <p>Mario Giraldo: <strong>(818) 677-4431</strong></p>
+          <!--<p>Alex Modarresi <strong>***-***-****</strong></p>-->
+        </div>
+        <!--
           <div class="footer-social">
             <h4>Social</h4>
             <div class="social-icons">
@@ -152,8 +152,8 @@
             </div>
           </div>
           -->
-        </div>
-      </footer>
+      </div>
+    </footer>
     <footer class="footer2">
       <p>&copy; 2024 ColCo. All Rights Reserved.</p>
     </footer>
