--- a/ml.html
+++ b/ml.html
@@ -35,7 +35,7 @@
 
     <section class="ml">
       <div class="ml-content">
-        <h1>Disease Detection Using Machine Learning</h1>
+        <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Disease Detection Using Machine Learning</h1>
       </div>
     </section>
 
@@ -52,8 +52,56 @@
           learning techniques, specifically convolutional neural networks
           (CNNs), to detect diseases in cacao pods through image classification.
         </p>
-      </div>
-    </section>
+
+        <!-- Meet the Teams Section -->
+        <section class="team" style="text-align: center; margin-top: 20px;">
+          <h2 style="font-weight: bold;">Meet the Teams</h2>
+          <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;">
+            <!-- Team Member 1 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 1]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Vaishnavi Sen</p>
+            </div>
+            <!-- Team Member 2 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 2]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Serineh Megerdichian</p>
+            </div>
+            <!-- Team Member 3 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 3]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Denise Pacheco</p>
+            </div>
+            <!-- Team Member 4 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 4]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Victoria Miteva</p>
+            </div>
+            <!-- Team Member 5 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 5]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Geoffrey Anselmo</p>
+            </div>
+            <!-- Team Member 6 -->
+            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
+              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+                <span>[Image 6]</span>
+              </div>
+              <p style="margin-top: 8px; font-weight: bold;">Ricky Malagon</p>
+            </div>
+          </div>
+        </section>
+
     <!-- Contact Section -->
       <section id="contact-section" class="contact-section">
         <div class="contact-info">
