I have added the colombian team page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="dropdown">
             <a href="ml.html">Meet the Teams</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Colombia Team</a></li>
+              <li><a href="co.html">Colombia Team</a></li>
               <li><a href="ml.html">Disease Detection</a></li>
               <li><a href="#">Data Collection</a></li>
             </ul>
