--- a/co.html
+++ b/co.html
@@ -28,80 +28,124 @@
               <li><a href="#">Data Collection</a></li>
             </ul>
           </li>
-          <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
+          <li><a href="#contact-section" class="contact-btn">Contact U</a></li>
         </ul>
       </nav>
     </header>
 
     <section class="ml">
       <div class="ml-content">
-        <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Disease Detection Using Machine Learning</h1>
+        <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Colombia Team</h1>
       </div>
     </section>
 
     <section class="intro">
       <div class="intro-content">
         <p>
-          Cocoa is a high-value crop with significant economic and cultural
-          importance. Colombia, as a key global player, exported USD 61.4
-          million in cocoa and derivatives in 2019, contributing to a global
-          market worth, USD 103 billion annually. Cocoa crops are threatened by
-          disease that can lead to up to 38% annual yield loss. Traditional
-          disease detection relies on manual inspection, which is
-          labor-intensive, subjective, and inconsistent. This project uses deep
-          learning techniques, specifically convolutional neural networks
-          (CNNs), to detect diseases in cacao pods through image classification.
+            As students on an international research trip to Colombia, our interdisciplinary fieldwork examines small-scale farming in the Coffee region, with a specific emphasis on Cacao cultivation. We will use Geographical Information Systems (GIS) to digitize and map data, creating visualizations of crop distribution and environmental patterns related to cocoa plants. By integrating field-collected data with GIS tools, our work provides valuable insights that serve as a foundational resource for decision-making. Our research leverages computer science to develop a deep-learning-based image detection program that aids international farmers in diagnosing and managing crop diseases, using image-processing techniques and data collected from Colombia. Utilizing the GIS and image detection data, we can conduct a thorough biological analysis offering clear insights into farmers' crops and showcasing ways to optimize their crop growth. This opportunity fosters collaboration with Colombian farmers, promoting cross-cultural exchange while advancing farming techniques, utilizing GIS, and promoting sustainability.  
         </p>
+        <title>Meet the Teams</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #15372c;
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
 
-        <!-- Meet the Teams Section -->
-        <section class="team" style="text-align: center; margin-top: 20px;">
-          <h2 style="font-weight: bold;">Meet the Teams</h2>
-          <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;">
-            <!-- Team Member 1 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 1]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Vaishnavi Sen</p>
-            </div>
-            <!-- Team Member 2 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 2]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Serineh Megerdichian</p>
-            </div>
-            <!-- Team Member 3 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 3]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Denise Pacheco</p>
-            </div>
-            <!-- Team Member 4 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 4]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Victoria Miteva</p>
-            </div>
-            <!-- Team Member 5 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 5]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Geoffrey Anselmo</p>
-            </div>
-            <!-- Team Member 6 -->
-            <div style="width: 200px; border: 1px solid #ccc; padding: 10px; border-radius: 10px; text-align: center;">
-              <div style="height: 150px; background-color: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
-                <span>[Image 6]</span>
-              </div>
-              <p style="margin-top: 8px; font-weight: bold;">Ricky Malagon</p>
-            </div>
+    .team {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .team h2 {
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    .team-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px; /* Space between rows */
+    }
+
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 20px; /* Space between team members */
+    }
+
+    .team-member {
+      width: 150px;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: white;
+      color: black;
+      text-align: center;
+    }
+
+    .team-member .image-placeholder {
+      height: 100px;
+      background-color: #f0f0f0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+
+    .team-member p {
+      margin: 0;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+    <section class="team" style="text-align: center; margin-top: 20px;">
+        <h2 style="font-weight: bold;">Meet the Teams</h2>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;"></div>
+    <div class="team-container">
+      <!-- First Row -->
+      <div class="row">
+        <div class="team-member">
+          <div class="image-placeholder">
+            <span>IMG</span>
           </div>
-        </section>
-
+          <p>Yash Pansheriya</p>
+        </div>
+        <div class="team-member">
+          <div class="image-placeholder">
+            <span>IMG</span>
+          </div>
+          <p>Viola Kuehl-jeberg</p>
+        </div>
+        <div class="team-member">
+          <div class="image-placeholder">
+            <span>IMG</span>
+          </div>
+          <p>Reachael Gilmore</p>
+        </div>
+      </div>
+      <!-- Second Row -->
+      <div class="row">
+        <div class="team-member">
+          <div class="image-placeholder">
+            <span>IMG</span>
+          </div>
+          <p>Denise Pacheco</p>
+        </div>
+        <div class="team-member">
+          <div class="image-placeholder">
+            <span>IMG</span>
+          </div>
+          <p>Kristine Morquecho</p>
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- Contact Section -->
     <section id="contact-section" class="contact-section">
       <div class="contact-info">
