--- a/hardware.html
+++ b/hardware.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meet the Hardware Team</title>
+    <title>Meet the Data Collection Team</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -21,7 +21,7 @@
             <ul class="dropdown-menu">
               <li><a href="#">Colombia Team</a></li>
               <li><a href="ml.html">Disease Detection</a></li>
-              <li><a href="#">Data Collection</a></li>
+              <li><a href="hardware.html">Data Collection</a></li>
             </ul>
           </li>
           <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
@@ -30,7 +30,7 @@
     </header>
 
     <section class="intro">
-      <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Meet the Hardware Team</h1>
+      <h1 style="text-align: center; font-weight: bold; margin-bottom: 10px;">Meet the Data Collection Team</h1>
     </section>
 
     <section class="team-section">
@@ -58,7 +58,7 @@
         <a href="#" class="team-card">
           <img src="image/team_member_3.jpg" alt="Team Member 3" />
           <div class="overlay-text">
-            <h3>Carlo<br> Uy</h3>
+            <h3>Carlo Uy</h3>
             <p>Computer Science Senior at California State University. etc etc</p>
           </div>
         </a>
@@ -76,7 +76,7 @@
         <a href="#" class="team-card">
           <img src="image/team_member_5.jpg" alt="Team Member 5" />
           <div class="overlay-text">
-            <h3>Divy <br> Mente</h3>
+            <h3>Divy Mente</h3>
             <p>Computer Science Senior at California State University. etc etc</p>
           </div>
         </a>
