--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="dropdown-menu">
               <li><a href="#">Colombia Team</a></li>
               <li><a href="ml.html">Disease Detection</a></li>
-              <li><a href="#">Data Collection</a></li>
+              <li><a href="#hardware.html">Data Collection</a></li>
             </ul>
           </li>
           <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
