--- a/index.html
+++ b/index.html
@@ -27,22 +27,14 @@
           "
         >
           <li><a href="index.html">The Project</a></li>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
           <li class="dropdown">
             <a href="ml.html">Meet the Teams</a>
             <ul class="dropdown-menu">
-              <li><a href="co.html">Colombia Team</a></li>
+              <li><a href="#">Colombia Team</a></li>
               <li><a href="ml.html">Disease Detection</a></li>
               <li><a href="#">Data Collection</a></li>
             </ul>
           </li>
-=======
-          <li><a href="ml.html">Meet the Teams</a></li>
->>>>>>> Stashed changes
-=======
-          <li><a href="ml.html">Meet the Teams</a></li>
->>>>>>> Stashed changes
           <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
         </ul>
       </nav>
