--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
           "
         >
           <li><a href="index.html">The Project</a></li>
-          <li class="dropdown">
-            <a href="ml.html">Meet the Teams</a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Colombia Team</a></li>
-              <li><a href="ml.html">Disease Detection</a></li>
-              <li><a href="#">Data Collection</a></li>
-            </ul>
-          </li>
+          <li><a href="ml.html">Meet the Teams</a></li>
           <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
         </ul>
       </nav>
