changes to all css and html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <img src="image/cocoa_plant.jpg" alt="Machine Learning Team" />
           <div class="overlay-text">
             <h3>Colombia Team</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Mapping & Field Team</p>
           </div>
         </a>
         <!-- Card 2 -->
@@ -112,7 +112,7 @@
           <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
           <div class="overlay-text">
             <h3>Disease Detection</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Innovation in Plant Health Diagnostics</p>
           </div>
         </a>
         <!-- Card 3 -->
