--- a/co.html
+++ b/co.html
@@ -3,32 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meet the Teams</title>
+    <title>Colombia Team</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <header>
+    <header class="navbar">
       <nav>
         <div class="logo">
-          <img
-            src="image/bean_icon.png"
-            alt="ColCo Logo"
-            style="width: 20px; height: 20px"
-          />
-          <span>ColCo</span>
+          <img src="image/bean_icon.png" />
+          <span>Col Co.</span>
         </div>
-        <ul>
-          <li><a href="index.html">The Project</a></li>
-          <li class="dropdown">
-            <a href="ml.html">Meet the Teams</a>
-            <ul class="dropdown-menu">
-              <li><a href="co.html">Colombia Team</a></li>
-              <li><a href="ml.html">Disease Detection</a></li>
-              <li><a href="#">Data Collection</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact-section" class="contact-btn">Contact U</a></li>
+        <ul
+          style="
+            display: flex;
+            list-style: none;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+          "
+        >
+          <li><a href="#project">The Project</a></li>
+          <li><a href="#teams">Meet the Teams</a></li>
+          <li><a href="#contact" class="contact-btn">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -102,8 +99,6 @@
       font-weight: bold;
     }
   </style>
-</head>
-<body>
     <section class="team" style="text-align: center; margin-top: 20px;">
         <h2 style="font-weight: bold;">Meet the Teams</h2>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;"></div>
