--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         >
           <li><a href="index.html">The Project</a></li>
           <li><a href="teams.html">Meet the Teams</a></li>
-          <li><a href="#contact-section" class="contact-btn">Contact Us</a></li>
+          <li><a href="index.html#contact-section" class="contact-btn">Contact Us</a></li>
         </ul>
       </nav>
     </header>
