updates on teams page

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         <!-- Icons Section -->
         <div class="icons-section">
           <div class="icon">
-            <img src="image/leaf-logo.jpg" />
-            <span>Organic making</span>
+            <img src="image/ai-insights.png" />
+            <span>AI-Powered Insights</span>
           </div>
           <div class="icon">
-            <img src="image/certified_icon.jpg" />
-            <span>Certified products</span>
+            <img src="image/certified-solutions.png" />
+            <span>Certified Solutions</span>
           </div>
           <div class="icon">
-            <img src="image/delivery_package.png" />
-            <span>Fast delivery</span>
+            <img src="image/productivity.png" />
+            <span>Enhanced Productivity</span>
           </div>
         </div>
       </div>
