--- a/teams.html
+++ b/teams.html
@@ -158,33 +158,28 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Vaishnavi Sen</h4>
+                <h4>Yash Pansheriya</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Serineh Megredichian</h4>
-                <p>Computer Science Student</p>
+                <h4>Viola Kuehl-jeberg</h4>
+                <p>(Major) Student</p>
+            </div>
+            <div class="team-member">
+                <div class="member-image"></div>
+                <h4>Reachael Gilmore</h4>
+                <p>(Major) Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
                 <h4>Denise Pacheco</h4>
-                <p>Computer Science Student</p>
+                <p>(Major) Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Victoria Miteva</h4>
-                <p>Computer Science Student</p>
-            </div>
-            <div class="team-member">
-                <div class="member-image"></div>
-                <h4>Geoffrey Anselmo</h4>
-                <p>Computer Science Student</p>
-            </div>
-            <div class="team-member">
-                <div class="member-image"></div>
-                <h4>Ricky Malagon</h4>
-                <p>Computer Science Student</p>
+                <h4>Kristine Morquecho</h4>
+                <p>(Major) Student</p>
             </div>
         </div>
     </section>
