updates to teams page

--- a/teams.html
+++ b/teams.html
@@ -113,32 +113,32 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Vaishnavi Sen</h4>
+                <h4>Andre Castillo Lee</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Serineh Megredichian</h4>
+                <h4>Brianna Rangel</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Denise Pacheco</h4>
+                <h4>Carlo Uy</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Victoria Miteva</h4>
+                <h4>Diego Arteaga</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Geoffrey Anselmo</h4>
+                <h4>Divy Mente</h4>
                 <p>Computer Science Student</p>
             </div>
             <div class="team-member">
                 <div class="member-image"></div>
-                <h4>Ricky Malagon</h4>
+                <h4>Deekshitha Chavalla</h4>
                 <p>Computer Science Student</p>
             </div>
         </div>
