styling and test contact form done

--- a/diseaseDetection.html
+++ b/diseaseDetection.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Col Co - Disease Detection Using ML</title>
-    <link rel="stylesheet" href="ml.css" />
+    <title>Disease Detection</title>
+    <link rel="icon" href="image/bean_icon.png" />
+    <link rel="stylesheet" href="css/ml.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/nav.css">
   </head>
   <body>
     <header class="navbar">
@@ -22,7 +26,7 @@
             padding: 0;
           "
         >
-          <li><a href="#project">The Project</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#teams">Meet the Teams</a></li>
           <li><a href="#contact" class="contact-btn">Contact Us</a></li>
         </ul>
@@ -30,6 +34,23 @@
     </header>
 
     <section class="hero">
+      <!-- Curvy background -->
+      <svg class='svg' viewBox="0 0 1440 539" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M-1 539C-1 539 309.631 479.916 511.172 478.137C712.713 476.358 817.305 524.355 994.45 512.182C1171.59 500.01 1451 431.149 1451 431.149V0H-1V539Z" fill="#023F3A"/>
+      </svg>
+      
+      <div class="float-text">
+          <h1>Disease Detection Using ML</h1>
+          <p>Leveraging Deep Learning and Computer Vision to Identify Cocoa Pod
+            Diseases and Minimize Yield Loss.</p>
+            <div class="buttons">
+              <a href="#" class="btn learn-more">Learn More</a>
+              <a class="btn start-trail" href="trial.html">Start Free Trial</a>
+            </div>
+      </div>
+  </section>
+
+    <!-- <section class="hero">
       <div class="hero-content">
         <h1>Disease Detection Using ML</h1>
         <p>
@@ -67,7 +88,7 @@
         Neural Networks (CNNs), to detect diseases in cocoa pods through image
         classification.
       </p>
-    </section>
+    </section> -->
 
     <section class="how-it-works-section">
       <h2>How It Works Option 1</h2>
