--- a/teams.html
+++ b/teams.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Image with Text</title>
+    <title>Teams</title>
+    <link rel="icon" href="image/bean_icon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/nav.css" />
@@ -25,7 +26,7 @@
               padding: 0;
             "
           >
-            <li><a href="index.html">The Project</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="teams.html">Meet the Teams</a></li>
             <li><a href="index.html#contact-section" class="contact-btn">Contact Us</a></li>
           </ul>
