--- a/trial.html
+++ b/trial.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<!--html hides data from page-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X_UA_Compartible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ColCo Trial</title>
-    <!-- Link To CSS-->
+    <link rel="icon" href="image/bean_icon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/hero.css">
     <link rel="stylesheet" href="css/nav.css">
   </head>
-  <!--Whatever we see on the Page-->
   <body>
     <header class="navbar">
       <nav>
@@ -28,7 +26,7 @@
             padding: 0;
           "
         >
-          <li><a href="index.html">The Project</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="teams.html">Meet the Teams</a></li>
           <li><a href="index.html#contact-section" class="contact-btn">Contact Us</a></li>
         </ul>
