--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
       <img src="image/cocoa_pods.png" alt="">
     </section>    
 
-    <section class="mission-section py-5" id="mission-section">
-        <div class="row">
-          <!-- Mission Text -->
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <h2>Our Mission</h2>
+    <section class="mission-section mt-5 p-4" id="mission-section">
+        <div class="row align-items-center pl-5">
+          <div class="col-lg-8 mb-4 mb-lg-0">
+            <h2 class="text-center mb-4">Our Mission</h2>
             <p>
               Cocoa farming faces numerous challenges, particularly from diseases
               that can devastate crops and livelihoods. Col Co aims to tackle these
@@ -96,54 +95,21 @@
           </div>
     
           <!-- Mission Images -->
-          <div class="col-lg-6 pl-5">
+          <div class="col-lg-4">
             <div class="row no-gutters">
-              <div class="col-6 pr-1">
-                <img src="image/plants.jpg" alt="Plants" class="img-fluid rounded">
+              <div class="col-12 mb-4">
+                <img src="image/bowl_of_cocoa.jpg" alt="Bowl of Cocoa" class="img-fluid">
               </div>
-              <div class="col-6 pl-1">
-                <img src="image/cocoa_pods.jpg" alt="Cocoa Pods" class="img-fluid rounded">
+              <div class="col-6 pr-3">
+                <img src="image/plants.jpg" alt="Plants" class="img-fluid mission-img">
               </div>
-              <div class="col-12 mt-2">
-                <img src="image/bowl_of_cocoa.jpg" alt="Bowl of Cocoa" class="img-fluid rounded">
+              <div class="col-6 pl-3">
+                <img src="image/cocoa_pods.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
               </div>
             </div>
           </div>
       </div>
     </section>
-
-    <!-- Our Mission -->
-    <!-- <section class="mission-section" id="mission-section">
-      <div class="mission-text">
-        <h2>Our Mission</h2>
-        <p>
-          Cocoa farming faces numerous challenges, particularly from diseases
-          that can devastate crops and livelihoods. Col Co aims to tackle these
-          challenges by introducing an image-based disease detection system.
-          Using deep learning and image processing, our system delivers fast,
-          accurate, and scalable disease diagnostics.
-        </p>
-        <div class="icons-section">
-          <div class="icon">
-            <img src="image/ai-insights.png" />
-            <span>AI-Powered Insights</span>
-          </div>
-          <div class="icon">
-            <img src="image/certified-solutions.png" />
-            <span>Certified Solutions</span>
-          </div>
-          <div class="icon">
-            <img src="image/productivity.png" />
-            <span>Enhanced Productivity</span>
-          </div>
-        </div>
-      </div>
-      <div class="mission-images">
-        <img src="image/plants.jpg" />
-        <img src="image/cocoa_pods.jpg" />
-        <img src="image/bowl_of_cocoa.jpg" />
-      </div>
-    </section> -->
 
     <!-- Meet the Team Section -->
     <section class="team-section" id="details">
