--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="navbar-brand logo" href="#">
-              <img src="image/bean_icon.png" />
-              <span>ColCo</span>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <div class="nav">
-                  <ul class="navbar-nav nav-menu">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+              <a class="navbar-brand logo" href="#">
+                  <img src="image/bean_icon.png" alt="Logo" style="height: 30px;" />
+                  <span>ColCo</span>
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
                       <li class="nav-item">
                           <a class="nav-link" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="">Meet the Teams</a>
+                          <a class="nav-link" href="#">Meet the Teams</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link contact-btn" href="">Contact Us</a>
+                          <a class="nav-link contact-btn" href="#">Contact Us</a>
                       </li>
                   </ul>
               </div>
           </div>
       </nav>
-  </header>  
+  </header> 
   <section class="home-hero">
     <div class="hero">
         <svg class="svg-lg" viewBox="0 0 1440 737" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -245,8 +245,11 @@
         <p>&copy; 2024 ColCo. All Rights Reserved.</p>
       </footer>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-      // document.getElementById("contact-form").addEventListener("submit", function (event) {
+        // document.getElementById("contact-form").addEventListener("submit", function (event) {
       //   event.preventDefault(); // Prevent the default form submission
     
       //   // Get the form data
