teams section mobile view done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
               <a class="navbar-brand logo" href="#">
-                  <img src="image/bean_icon.png" alt="Logo" style="height: 30px;" />
+                  <img src="image/bean_icon.png" alt="Logo" />
                   <span>ColCo</span>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
     </section>    
 
     <section class="mission-section mt-5 p-4" id="mission-section">
-        <div class="row align-items-center pl-5">
+        <div class="row align-items-center p-2">
           <div class="col-lg-8 mb-4 mb-lg-0">
             <h2 class="text-center mb-4">Our Mission</h2>
             <p>
@@ -100,10 +100,10 @@
               <div class="col-12 mb-4">
                 <img src="image/bowl_of_cocoa.jpg" alt="Bowl of Cocoa" class="img-fluid">
               </div>
-              <div class="col-6 pr-3">
+              <div class="col-6 pr-2">
                 <img src="image/plants.jpg" alt="Plants" class="img-fluid mission-img">
               </div>
-              <div class="col-6 pl-3">
+              <div class="col-6 pl-2">
                 <img src="image/cocoa_pods.jpg" alt="Cocoa Pods" class="img-fluid mission-img">
               </div>
             </div>
@@ -112,10 +112,46 @@
     </section>
 
     <!-- Meet the Team Section -->
-    <section class="team-section" id="details">
+    <section class="team-section container" id="details">
+        <h2 class="text-center mb-5">Agricultural interventions</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="team-card position-relative">
+                  <img src="image/cocoa_plant.jpg" />
+                    <div class="card-body position-absolute">
+                        <h3 class="card-title">Colombia Team</h3>
+                        <p class="card-text">International relations and research</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="team-card position-relative">
+                  <img src="image/plant-ml.jpg" />
+                    <div class="card-body position-absolute">
+                        <h3 class="card-title">Disease Detection</h3>
+                        <p class="card-text">ML and Image Processing</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="team-card position-relative">
+                  <img src="image/sensor.jpg" />
+                    <div class="card-body position-absolute">
+                        <h3 class="card-title">Data Collection</h3>
+                        <p class="card-text">Sensors and GSI Information</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
+
+
+
+    <!-- <section class="team-section" id="details">
       <h2>Our Agricultural Innovations</h2>
       <div class="team-container">
-        <!-- Card 1 -->
         <a href="#" class="team-card">
           <img src="image/cocoa_plant.jpg" alt="Machine Learning Team" />
           <div class="overlay-text">
@@ -123,7 +159,6 @@
             <p>Mapping & Field Team</p>
           </div>
         </a>
-        <!-- Card 2 -->
         <a href="diseaseDetection.html" class="team-card">
           <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
           <div class="overlay-text">
@@ -131,7 +166,6 @@
             <p>Innovation in Plant Health Diagnostics</p>
           </div>
         </a>
-        <!-- Card 3 -->
         <a href="data-collection-team.html" class="team-card">
           <img src="image/sensor.jpg" alt="Data Collection Team" />
           <div class="overlay-text">
@@ -140,7 +174,7 @@
           </div>
         </a>
       </div>
-    </section>
+    </section> -->
       <!-- Contact Section -->
       <section id="contact-section" class="contact-section">
         <div class="contact-info">
