contact section done

--- a/index.html
+++ b/index.html
@@ -145,38 +145,49 @@
         </div>
     </section>
     
-
-
-
-
-    <!-- <section class="team-section" id="details">
-      <h2>Our Agricultural Innovations</h2>
-      <div class="team-container">
-        <a href="#" class="team-card">
-          <img src="image/cocoa_plant.jpg" alt="Machine Learning Team" />
-          <div class="overlay-text">
-            <h3>Colombia Team</h3>
-            <p>Mapping & Field Team</p>
+    <!-- Contact Section -->
+    <section class="contact-section container py-5">
+      <div class="row">
+          <!-- Contact Information -->
+          <div class="col-md-6 contact-info">
+            <div class="row justify-content-center mr-auto">
+                <div class="icon-text pr-5">
+                  <div>
+                      <img src="image/envelop.png" alt="envelop icon">
+                      <p class="font-weight-bold">Email</p>
+                      <p>colcaoai@gmail.com</p>
+                  </div>
+                </div>
+                <div class="icon-text pl-4">
+                  <div>
+                      <img src="image/location.png" alt="location icon">
+                      <p class="font-weight-bold">Office</p>
+                      <p>Northridge, CA, USA</p>
+                  </div>
+              </div>
+            </div>
           </div>
-        </a>
-        <a href="diseaseDetection.html" class="team-card">
-          <img src="image/plant-ml.jpg" alt="Machine Learning Team" />
-          <div class="overlay-text">
-            <h3>Disease Detection</h3>
-            <p>Innovation in Plant Health Diagnostics</p>
+
+          <!-- Contact Form -->
+          <div class="col-md-6">
+              <form class="contact-form">
+                  <div class="form-group">
+                      <label for="email" class="font-weight-bold">Email</label>
+                      <input type="email" class="form-control" id="email" placeholder="pat@shuffle.dev">
+                  </div>
+                  <div class="form-group">
+                      <label class="font-weight-bold" for="message">Message</label>
+                      <textarea class="form-control" id="message" rows="5" placeholder="Your message..."></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-block font-weight-bold">Send</button>
+              </form>
           </div>
-        </a>
-        <a href="data-collection-team.html" class="team-card">
-          <img src="image/sensor.jpg" alt="Data Collection Team" />
-          <div class="overlay-text">
-            <h3>Data Collection Team</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </a>
       </div>
-    </section> -->
-      <!-- Contact Section -->
-      <section id="contact-section" class="contact-section">
+    </section>
+
+  
+      
+      <!-- <section id="contact-section" class="contact-section">
         <div class="contact-info">
           <div class="info-item">
             <img src="image/envelop.png" alt="envelop icon">
@@ -196,20 +207,8 @@
             <h3>Office</h3>
             <p>1686, Geraldine Lane<br />New York, NY 10013</p>
           </div>
-          <!--
-          <div class="info-item">
-            <img src="image/social.png" alt="social icon">
-            <h3>Socials</h3>
-            <div class="social-icons">
-              <a href="#"><i>FB</i></a>
-              <a href="#"><i>TW</i></a>
-              <a href="#"><i>IG</i></a>
-              <a href="#"><i>LI</i></a>
-            </div>
-          </div>
-          -->
+
         </div>
-        <!-- Contact Form -->
         <div class="contact-form">
           <form action="#" method="post">
             <label for="email">Email</label>
@@ -229,7 +228,7 @@
             <button type="submit">Send</button>
           </form>
         </div>
-      </section>
+      </section> -->
 
       <!-- 1st Footer Section -->
       <footer class="footer">
