--- a/teams.html
+++ b/teams.html
@@ -225,6 +225,10 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer2" style="color: white; text-align: center;">
+        <p>&copy; 2024 ColCo. All Rights Reserved.</p>
+      </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
