setup for subparts of the project

--- a/index.html
+++ b/index.html
@@ -115,15 +115,18 @@
         <h2 class="text-center mb-5">Agricultural interventions</h2>
         <div class="row">
             <div class="col-md-4">
+              <a href="co.html">                
                 <div class="team-card position-relative">
-                  <img src="image/cocoa_plant.jpg" />
-                    <div class="card-body position-absolute">
-                        <h3 class="card-title">Colombia Team</h3>
-                        <p class="card-text">International relations and research</p>
-                    </div>
-                </div>
+                <img src="image/cocoa_plant.jpg" />
+                  <div class="card-body position-absolute">
+                      <h3 class="card-title">Colombia Team</h3>
+                      <p class="card-text">International relations and research</p>
+                  </div>
+              </div></a>
+
             </div>
             <div class="col-md-4">
+              <a href="diseaseDetection.html">
                 <div class="team-card position-relative">
                   <img src="image/plant-ml.jpg" />
                     <div class="card-body position-absolute">
@@ -131,8 +134,10 @@
                         <p class="card-text">ML and Image Processing</p>
                     </div>
                 </div>
+              </a>
             </div>
             <div class="col-md-4">
+              <a href="diseaseDetection.html">
                 <div class="team-card position-relative">
                   <img src="image/sensor.jpg" />
                     <div class="card-body position-absolute">
@@ -140,6 +145,7 @@
                         <p class="card-text">Sensors and GSI Information</p>
                     </div>
                 </div>
+              </a>
             </div>
         </div>
     </section>
