--- a/co.html
+++ b/co.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X_UA_Compartible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colombia Team</title>
+    <title>ColCo</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="icon" href="image/bean_icon.png" />
   </head>
-
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -146,106 +149,12 @@
       </div>
     </div>
   </section>
-    <!-- Contact Section -->
-    <section id="contact-section" class="contact-section">
-      <div class="contact-info">
-        <div class="info-item">
-          <span>📧</span>
-          <h3>Email</h3>
-          <p>
-            mario.giraldo@csun.edu <br />
-            alex.modarresi@csun.edu
-          </p>
-        </div>
-        <div class="info-item">
-          <span>📞</span>
-          <h3>Phone</h3>
-            <p>(818) 677-4431 <br /></p>
-        </div>
-        <div class="info-item">
-          <span>📍</span>
-          <h3>Office</h3>
-          <p>1686, Geraldine Lane<br />New York, NY 10013</p>
-        </div>
-        <!--
-          <div class="info-item">
-            <span>🔗</span>
-            <h3>Socials</h3>
-            <div class="social-icons">
-              <a href="#"><i>FB</i></a>
-              <a href="#"><i>TW</i></a>
-              <a href="#"><i>IG</i></a>
-              <a href="#"><i>LI</i></a>
-            </div>
-          </div>
-          -->
-      </div>
-      <!-- Contact Form -->
-      <div class="contact-form">
-        <form action="#" method="post">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            placeholder="email@gmail.com"
-            required
-          />
-          <label for="message">Message</label>
-          <textarea
-            id="message"
-            placeholder="Your message..."
-            rows="5"
-            required
-          ></textarea>
-          <button type="submit">Send</button>
-        </form>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="footer-content">
-        <h3>ColCo</h3>
-        <div class="footer-links">
-          <h4>Quick links</h4>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <!--<li><a href="#">Why choose us</a></li>
-            <li><a href="#">Privacy Policy</a></li>-->
-          </ul>
-        </div>
-        <!--
-          <div class="footer-products">
-            <h4>Products</h4>
-            <ul>
-              <li>...</li>
-              <li>...</li>
-              <li>...</li>
-              <li>...</li>
-              <li>...</li>
-            </ul>
-          </div>
-          -->
-        <div class="footer-contact">
-          <h4>Contact Us</h4>
-          <p>Mario Giraldo: <strong>(818) 677-4431</strong></p>
-          <!--<p>Alex Modarresi <strong>***-***-****</strong></p>-->
-        </div>
-        <!--
-          <div class="footer-social">
-            <h4>Social</h4>
-            <div class="social-icons">
-              <a href="#">FB</a>
-              <a href="#">TW</a>
-              <a href="#">IG</a>
-              <a href="#">YT</a>
-            </div>
-          </div>
-          -->
-      </div>
-    </footer>
-    <footer class="footer2">
+
+    <footer class="footer2" style="color: white; text-align: center;">
       <p>&copy; 2024 ColCo. All Rights Reserved.</p>
     </footer>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  
 </html>
